--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "@types/node": "^16.18.83",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
+    "axios": "^1.8.3",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "swiper": "^11.2.5",
     "typescript": "^4.9.5",
+    "usehooks-ts": "^3.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -30,6 +34,8 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "@types/swiper": "^6.0.0",
     "typescript-plugin-css-modules": "^5.1.0"
   },
   "browserslist": {
