add create petition page

--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
     "axios": "^1.8.3",
+    "classnames": "^2.5.1",
+    "draft-js": "^0.11.7",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.5",
     "typescript": "^4.9.5",
     "usehooks-ts": "^3.1.1",
@@ -35,6 +42,8 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/react-alert": "^7.0.6",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "@types/swiper": "^6.0.0",
     "typescript-plugin-css-modules": "^5.1.0"
   },
