--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 REACT_APP_API_HOST=http://voicematters.ru/
-REACT_APP_WSS_URL=ws://voicematters.ru/voice-matters-hub/
+REACT_APP_WSS_URL=http://voicematters.ru/voice-matters-hub/
