--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@number-flow/react": "^0.5.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -24,7 +25,6 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
-    "react-use-websocket": "^4.13.0",
     "swiper": "^11.2.5",
     "typescript": "^4.9.5",
     "usehooks-ts": "^3.1.1",
